"feat: add prettier plugins for import sorting and JSON formatting, update prettier config with custom rules"

--- a/002_project/package.json
+++ b/002_project/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://louiscklaw.github.io/dashboard-tryout",
   "dependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -12,6 +13,7 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "prettier-plugin-sort-json": "^4.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
