"feat: add code formatting script with prettier, clean up import statements, and standardize JSX formatting"

--- a/002_project/package.json
+++ b/002_project/package.json
@@ -22,6 +22,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,md}\"",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
