--- a/002_project/package.json
+++ b/002_project/package.json
@@ -13,12 +13,14 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "eslint-plugin-react-refresh": "^0.4.20",
     "prettier-plugin-sort-json": "^4.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
     "sass": "^1.89.2",
     "typescript": "^4.9.5",
+    "typescript-eslint": "^8.34.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
